--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
     "@types/node-forge": "^1.3.11",
     "@types/xml2js": "^0.4.14",
     "fast-xml-parser": "^5.2.5",
