--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@types/node-forge": "^1.3.11",
     "@types/xml2js": "^0.4.14",
+    "axios": "^1.10.0",
     "fast-xml-parser": "^5.2.5",
     "joi": "^17.13.3",
     "next": "15.3.4",
