--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@supabase/supabase-js": "^2.50.3",
     "@tanstack/react-query": "^5.81.5",
     "@types/node-forge": "^1.3.11",
+    "@types/pako": "^2.0.3",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.10.0",
     "fast-xml-parser": "^5.2.5",
     "joi": "^17.13.3",
     "next": "15.3.4",
     "node-forge": "^1.3.1",
+    "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "xml2js": "^0.6.2",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.34"
